move to al-folio

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,8 @@
 ---
 
 @article{shapira2023human,
+abstract={PLACEHOLDER},
+  bibtex_show={true},
   title={Human Choice Prediction in Language-based Persuasion Games: Simulation-based Off-Policy Evaluation},
   author={Shapira, Eilam and Apel, Reut and Tennenholtz, Moshe and Reichart, Roi},
   journal={arXiv preprint arXiv:2305.10361},
@@ -9,8 +11,20 @@
 }
 
 @article{shapira2024can,
+  bibtex_show={true},
   title={Can Large Language Models Replace Economic Choice Prediction Labs?},
   author={Shapira, Eilam and Madmon, Omer and Reichart, Roi and Tennenholtz, Moshe},
   journal={arXiv preprint arXiv:2401.17435},
   year={2024}
+}
+
+@misc{amosy2024text2modeltextbasedmodelinduction,
+      bibtex_show={true},
+      title={Text2Model: Text-based Model Induction for Zero-shot Image Classification},
+      author={Ohad Amosy and Tomer Volk and Eilam Shapira and Eyal Ben-David and Roi Reichart and Gal Chechik},
+      year={2024},
+      eprint={2210.15182},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2210.15182},
 }
