--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,7 @@
 @article{shapira2023human,
 abstract={PLACEHOLDER},
   bibtex_show={true},
+  arxiv={2305.10361},
   title={Human Choice Prediction in Language-based Persuasion Games: Simulation-based Off-Policy Evaluation},
   author={Shapira, Eilam and Apel, Reut and Tennenholtz, Moshe and Reichart, Roi},
   journal={arXiv preprint arXiv:2305.10361},
@@ -11,7 +12,9 @@ abstract={PLACEHOLDER},
 }
 
 @article{shapira2024can,
+
   bibtex_show={true},
+  arxiv={2401.17435},
   title={Can Large Language Models Replace Economic Choice Prediction Labs?},
   author={Shapira, Eilam and Madmon, Omer and Reichart, Roi and Tennenholtz, Moshe},
   journal={arXiv preprint arXiv:2401.17435},
@@ -19,6 +22,7 @@ abstract={PLACEHOLDER},
 }
 
 @misc{amosy2024text2modeltextbasedmodelinduction,
+arxiv={2210.15182},
       bibtex_show={true},
       title={Text2Model: Text-based Model Induction for Zero-shot Image Classification},
       author={Ohad Amosy and Tomer Volk and Eilam Shapira and Eyal Ben-David and Roi Reichart and Gal Chechik},
