--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,3 +36,13 @@ abstract={Recent advances in Large Language Models (LLMs) have spurred interest 
       primaryClass={cs.CV},
       url={https://arxiv.org/abs/2210.15182},
 }
+
+@misc{shapira2024gleeunifiedframeworkbenchmark,
+      title={GLEE: A Unified Framework and Benchmark for Language-based Economic Environments},
+      author={Eilam Shapira and Omer Madmon and Itamar Reinman and Samuel Joseph Amouyal and Roi Reichart and Moshe Tennenholtz},
+      year={2024},
+      eprint={2410.05254},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2410.05254},
+}
