--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,10 +32,21 @@ encourage researchers to explore it further and build on its foundation.},
 }
 
 @article{shapira2024can,
-  abstract={Human choice prediction in economic contexts is crucial for applications in marketing, finance, public policy, and more. This task, however, is often constrained by the difficulties in acquiring human choice data. With most experimental economics studies focusing on simple choice settings, the AI community has explored whether LLMs can substitute for humans in these predictions and examined more complex experimental economics settings. However, a key question remains: can LLMs generate training data for human choice prediction? We explore this in language-based persuasion games, a complex economic setting involving natural language in strategic interactions. Our experiments show that models trained on LLM-generated data can effectively predict human behavior in these games and even outperform models trained on actual human data.},
+  abstract={Human choice prediction in economic contexts
+is crucial for applications in marketing, finance,
+public policy, and more. This task, however,
+is often constrained by the difficulties in acquiring human choice data. With most experimental economics studies focusing on simple
+choice settings, the AI community has explored
+whether LLMs can substitute for humans in
+these predictions and examined more complex
+experimental economics settings. However, a
+key question remains: can LLMs generate training data for human choice prediction? We explore this in language-based persuasion games,
+a complex economic setting involving natural language in strategic interactions. Our experiments show that models trained on LLMgenerated data can effectively predict human
+behavior in these games and even outperform
+models trained on actual human data.},
   bibtex_show={true},
   pdf={https://arxiv.org/pdf/2401.17435.pdf},
-  title={Can Large Language Models Replace Economic Choice Prediction Labs?},
+  title={Can Large Language Models Replace Economic Choice Prediction Labs? The Case of Language-based Persuasion Games},
   author={Shapira, Eilam and Madmon, Omer and Reichart, Roi and Tennenholtz, Moshe},
   journal={arXiv preprint arXiv:2401.17435},
   year={2024},
