--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,6 +29,8 @@ encourage researchers to explore it further and build on its foundation.},
       archivePrefix={arXiv},
       primaryClass={cs.CL},
       url={https://arxiv.org/abs/2410.05254},
+      selected={true},
+      code={https://github.com/eilamshapira/GLEE},
 }
 
 @article{shapira2024can,
