Update Towards LLM based Experimental Economics

--- a/assets/bibliography/2024-11-05-Towards-LLM-based-Experimental-Economics.bib
+++ b/assets/bibliography/2024-11-05-Towards-LLM-based-Experimental-Economics.bib
@@ -101,6 +101,24 @@
   booktitle={Forty-first International Conference on Machine Learning}
 }
 
+
+@InProceedings{ramansteer,
+title = 	 {STEER: Assessing the Economic Rationality of Large Language Models},
+author =       {Raman, Narun Krishnamurthi and Lundy, Taylor and Amouyal, Samuel Joseph and Levine, Yoav and Leyton-Brown, Kevin and Tennenholtz, Moshe},
+booktitle = 	 {Proceedings of the 41st International Conference on Machine Learning},
+pages = 	 {42026--42047},
+year = 	 {2024},
+editor = 	 {Salakhutdinov, Ruslan and Kolter, Zico and Heller, Katherine and Weller, Adrian and Oliver, Nuria and Scarlett, Jonathan and Berkenkamp, Felix},
+volume = 	 {235},
+series = 	 {Proceedings of Machine Learning Research},
+month = 	 {21--27 Jul},
+publisher =    {PMLR},
+pdf = 	 {https://raw.githubusercontent.com/mlresearch/v235/main/assets/raman24b/raman24b.pdf},
+url = 	 {https://proceedings.mlr.press/v235/raman24b.html},
+abstract = 	 {There is increasing interest in using LLMs as decision-making "agents". Doing so includes many degrees of freedom: which model should be used; how should it be prompted; should it be asked to introspect, conduct chain-of-thought reasoning, etc? Settling these questions—and more broadly, determining whether an LLM agent is reliable enough to be trusted—requires a methodology for assessing such an agent’s economic rationality. In this paper, we provide one. We begin by surveying the economic literature on rational decision making, taxonomizing a large set of fine-grained "elements" that an agent should exhibit, along with dependencies between them. We then propose a benchmark distribution that quantitatively scores an LLMs performance on these elements and, combined with a user-provided rubric, produces a "rationality report card". Finally, we describe the results of a large-scale empirical experiment with 14 different LLMs, characterizing the both current state of the art and the impact of different model sizes on models’ ability to exhibit rational behavior.}
+}
+
+
 @article{shapira2024can,
   title={Can Large Language Models Replace Economic Choice Prediction Labs?},
   author={Shapira, Eilam and Madmon, Omer and Reichart, Roi and Tennenholtz, Moshe},
@@ -224,5 +242,3 @@
    author={Wang, Lei and Ma, Chen and Feng, Xueyang and Zhang, Zeyu and Yang, Hao and Zhang, Jingsen and Chen, Zhiyuan and Tang, Jiakai and Chen, Xu and Lin, Yankai and Zhao, Wayne Xin and Wei, Zhewei and Wen, Jirong},
    year={2024},
    month=mar }
-
-
