--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -57,6 +57,7 @@ models trained on actual human data.},
 
 @inproceedings{amosy-etal-2024-text2model,
     title = "{T}ext2{M}odel: Text-based Model Induction for Zero-shot Image Classification",
+    bibtex_show={true},
     author = "Amosy, Ohad  and
       Volk, Tomer  and
       Shapira, Eilam  and
