--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -91,3 +91,13 @@ abstract={Recent advances in Large Language Models (LLMs) have spurred interest 
   code={https://github.com/eilamshapira/HumanChoicePrediction},
 }
 
+@inproceedings{
+shlomi2025transition,
+bibtex_show={true},
+title={Transition Function Prediction in {AI} Planning Using {LLM}s},
+author={Eliezer Shlomi and Guy Azran and Eilam Shapira and Omer Nahum and Roi Reichart and Guy Uziel and Michael Katz and Ateret Anaby Tavor and Sarah Keren},
+booktitle={AAAI 2025 Workshop LM4Plan},
+year={2025},
+url={https://openreview.net/forum?id=SPRYlWKaPj}
+pdf={https://openreview.net/pdf?id=SPRYlWKaPj},
+}
