--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -98,6 +98,6 @@ title={Transition Function Prediction in {AI} Planning Using {LLM}s},
 author={Eliezer Shlomi and Guy Azran and Eilam Shapira and Omer Nahum and Roi Reichart and Guy Uziel and Michael Katz and Ateret Anaby Tavor and Sarah Keren},
 booktitle={AAAI 2025 Workshop LM4Plan},
 year={2025},
-url={https://openreview.net/forum?id=SPRYlWKaPj}
+url={https://openreview.net/forum?id=SPRYlWKaPj},
 pdf={https://openreview.net/pdf?id=SPRYlWKaPj},
 }
