add new article - fairness under competition

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -84,7 +84,7 @@ abstract={Recent advances in Large Language Models (LLMs) have spurred interest 
   bibtex_show={true},
   pdf={https://arxiv.org/pdf/2305.10361.pdf},
   title={Human Choice Prediction in Language-based Persuasion Games: Simulation-based Off-Policy Evaluation},
-  author={Shapira, Eilam and Apel, Reut and Tennenholtz, Moshe and Reichart, Roi},
+  author={Shapira, Eilam and Madmon, Omer and Apel, Reut and Tennenholtz, Moshe and Reichart, Roi},
   journal={arXiv preprint arXiv:2305.10361},
   year={2023},
   selected={true},
@@ -100,4 +100,15 @@ booktitle={AAAI 2025 Workshop LM4Plan},
 year={2025},
 url={https://openreview.net/forum?id=SPRYlWKaPj},
 pdf={https://openreview.net/pdf?id=SPRYlWKaPj},
+}
+
+@article{gradwohl2025fairness,
+  title={Fairness under Competition},
+  author={Gradwohl, Ronen and Shapira, Eilam and Tennenholtz, Moshe},
+  journal={arXiv preprint arXiv:2505.16291},
+  year={2025},
+  pdf={https://arxiv.org/pdf/2505.16291.pdf},
+  bibtex_show={true},
+  url={https://arxiv.org/abs/2505.16291},
+  abstract={Algorithmic fairness has emerged as a central issue in ML, and it has become standard practice to adjust ML algorithms so that they will satisfy fairness requirements such as Equal Opportunity. In this paper we consider the effects of adopting such fair classifiers on the overall level of ecosystem fairness. Specifically, we introduce the study of fairness with competing firms, and demonstrate the failure of fair classifiers in yielding fair ecosystems. Our results quantify the loss of fairness in systems, under a variety of conditions, based on classifiers' correlation and the level of their data overlap. We show that even if competing classifiers are individually fair, the ecosystem's outcome may be unfair; and that adjusting biased algorithms to improve their individual fairness may lead to an overall decline in ecosystem fairness. In addition to these theoretical results, we also provide supporting experimental evidence. Together, our model and results provide a novel and essential call for action.}
 }
